<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".TagActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:ems="10"
            android:hint="@string/tag_name_hint" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_loc_desc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:ems="10"
            android:hint="@string/tag_desc"
            android:lines="5" >
        </EditText>

        <ListView
            android:id="@+id/lv_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="10dip" >
        </ListView>

        <LinearLayout
            android:id="@+id/create_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dip"
            android:layout_marginBottom="5dip">
            <Button
                android:id="@+id/btn_camera"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:text="@string/tag_camera" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:text="@string/tag_next" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>