<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".CreateActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_create_name"
            android:layout_marginTop="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginLeft ="20dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/create_name_hint" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/et_create_description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:layout_marginRight="20dip"
            android:layout_marginLeft ="20dip"
            android:layout_marginBottom="10dip"
            android:ems="10"
            android:hint="@string/create_desc_hint"
            android:lines="5" />

        <ListView
            android:id="@+id/lv_photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="10dip" >
        </ListView>

        <LinearLayout
            android:id="@+id/create_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginTop="10dip"
            android:layout_marginBottom="5dip">

            <Button
                android:id="@+id/btn_tag"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_weight="1"
                android:text="@string/create_tag" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:text="@string/create_save" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>